--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 	<title>Proyecto phaser</title>
-	<link rel="stylesheet" type="text/css" href="style.css" media="all">
+	<link rel="stylesheet" type="text/css" href="https://web.sergigonzalez3.repl.co/CSS/style.css" media="all">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.54.0/phaser.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.5.0/sql-wasm.js"></script>
 </head>
@@ -14,4 +14,4 @@
     <p>Este es mi juego en phaser</p>
 	</div>
 </body>
-</html>
+</html> 
